ingress/hola.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola
  labels:
    app: hola
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hola
  template:
    metadata:
      labels:
        app: hola
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:1.7.9
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-data
              mountPath: /usr/share/nginx/html
        - name: content
          image: alpine
          volumeMounts:
            - name: shared-data
              mountPath: /pod-data
          command: ["/bin/sh"]
          args: ["-c", "echo ¡Hola! > /pod-data/index.html && tail -f /dev/null"]
---
apiVersion: v1
kind: Service
metadata:
  name: hola
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
  selector:
    app: hola
