ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rules
spec:
  rules:
    - host: hola.test
      http:
        paths:
          - path: /
            backend:
              serviceName: hola
              servicePort: 80
    - host: adios.test
      http:
        paths:
          - path: /
            backend:
              serviceName: adios
              servicePort: 80
